test: add testing for GetUserWallet
