# main.go
@@ -9,10 +9,10 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
-// @title			Wallet API
+// @title		Wallet API
 // @version		1.0
 // @description	Sophisticated Wallet API
-// @host			localhost:1323
+// @host		localhost:1323
 func main() {
 	p, err := postgres.New()
 	if err != nil {
@@ -23,9 +23,11 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	handler := wallet.New(p)
 
-	g := e.Group("/api/v1")
-	g.GET("/wallets", handler.GetWalletsHandler)           // challenge 3
-	g.GET("/users/:id/wallets", handler.UserWalletHandler) // challenge 4
+	g := e.Group("")
+
+	g.GET("/api/v1/wallets", handler.GetWalletsHandler)       // challenge 3
+	g.GET("/users/:id/wallets", handler.GetUserWalletHandler) // challenge 4
+
 	g.POST("/wallets", handler.CreateWalletHandler)
 	g.PUT("/wallets", handler.UpdateWalletHandler)
 	g.DELETE("/users/:id/wallets", handler.DeleteUserWalletHandler)
