# wallet/handler.go
@@ -62,6 +62,18 @@ func (h *Handler) GetWalletsHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, wallets)
 }
 
+// CreateWalletHandler
+//
+//	@Summary		Create wallet
+//	@Description	Create wallet
+//	@Tags			wallet
+//	@Accept			json
+//	@Produce		json
+//	@Param			wallet	body	WalletForCreate	true	"Wallet object"
+//	@Success		201	{object}	Wallet
+//	@Failure		400	{object}	Err
+//	@Failure		500	{object}	Err
+//	@Router			/api/v1/wallets [post]
 func (h *Handler) CreateWalletHandler(c echo.Context) error {
 	// bind request body to wallet
 	wallet := Wallet{}
@@ -79,6 +91,18 @@ func (h *Handler) CreateWalletHandler(c echo.Context) error {
 	return c.JSON(http.StatusCreated, wallet)
 }
 
+// UpdateWalletHandler
+//
+//	@Summary		Update wallet
+//	@Description	Update wallet
+//	@Tags			wallet
+//	@Accept			json
+//	@Produce		json
+//	@Param			wallet	body	WalletForUpdate	true	"Wallet object"
+//	@Success		200	{object}	Wallet
+//	@Failure		400	{object}	Err
+//	@Failure		500	{object}	Err
+//	@Router			/api/v1/wallets [put]
 func (h *Handler) UpdateWalletHandler(c echo.Context) error {
 	// bind request body to wallet
 	wallet := Wallet{}
@@ -96,37 +120,42 @@ func (h *Handler) UpdateWalletHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, wallet)
 }
 
-// UserWalletHandler
+// GetUserWalletHandler
 //
-//			@Summary		Get all wallets for the user
-//			@Description	Get all wallets for the user
-//			@Tags			wallet
-//			@Accept			json
-//			@Produce		json
-//		    @Param			id      path        int true "User ID"
-//			@Success		200     {array}	    Wallet
-//	        @Failure		400	    {object}	Err
-//			@Failure		500	    {object}	Err
-//			@Router			/api/v1/user/{id}/wallets [get]
-func (h *Handler) UserWalletHandler(c echo.Context) error {
+// @Summary		Get all wallets for the user
+// @Description	Get all wallets for the user
+// @Tags		user wallet
+// @Accept		json
+// @Produce		json
+// @Param		id      path        int true "User ID"
+// @Success		200     {array}	    Wallet
+// @Failure		400	    {object}	Err
+// @Failure		500	    {object}	Err
+// @Router		/api/v1/users/{id}/wallets [get]
+func (h *Handler) GetUserWalletHandler(c echo.Context) error {
 	filter := Wallet{}
 
 	// prepare filter: user_id
+	var userID int
+	var err error
 	strUserID := c.Param("id")
 	if strUserID == "" {
+		log.Printf("error: user_id is ''\n")
 		return c.JSON(http.StatusBadRequest, Err{Message: "user_id is required"})
 	}
-	if userID, err := strconv.Atoi(strUserID); err == nil {
-		filter.UserID = userID
+	if userID, err = strconv.Atoi(strUserID); err != nil {
+		log.Printf("error: %v\n", err)
+		return c.JSON(http.StatusBadRequest, Err{Message: "invalid user_id"})
 	}
+	filter.UserID = userID
 
 	// prepare filter: wallet_type
-	if walletType := c.QueryParam("wallet_type"); walletType != "" {
-		filter.WalletType = walletType
-		if !IsWalletTypeValid(walletType) {
-			return c.JSON(http.StatusOK, []Wallet{})
-		}
-	}
+	//if walletType := c.QueryParam("wallet_type"); walletType != "" {
+	//	filter.WalletType = walletType
+	//	if !IsWalletTypeValid(walletType) {
+	//		return c.JSON(http.StatusOK, []Wallet{})
+	//	}
+	//}
 
 	// get wallets
 	wallets, err := h.store.GetWallets(filter)
@@ -138,6 +167,17 @@ func (h *Handler) UserWalletHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, wallets)
 }
 
+//	DeleteUserWalletHandler
+//
+// @Summary		Delete wallet for the user
+// @Description	Delete wallet for the user
+// @Tags		user wallet
+// @Produce		json
+// @Param		id      path        int true "User ID"
+// @Success		204
+// @Failure		400	    {object}	Err
+// @Failure		500	    {object}	Err
+// @Router		/api/v1/user/{id}/wallets [delete]
 func (h *Handler) DeleteUserWalletHandler(c echo.Context) error {
 	// parse user id
 	userID, err := ParseUserID(c)
